objects/Personal_and_Family_History_of_Brain__c.object
<CustomObject>
    <fields>
        <fullName>Addiction_All_Types__c</fullName>
        <description>Addiction [All Types]</description>
        <label>BD_v1.0.1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alzheimers_Disease__c</fullName>
        <description>Alzheimer’s Disease (AD)</description>
        <label>BD_v1.0.2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amyotrophic_Lateral_Sclerosis__c</fullName>
        <description>Amyotrophic Lateral Sclerosis (ALS)</description>
        <label>BD_v1.0.3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aneurysm__c</fullName>
        <description>Aneurysm</description>
        <label>BD_v1.0.4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anorexia_Nervosa__c</fullName>
        <description>Anorexia Nervosa</description>
        <label>BD_v1.0.6</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aphasia__c</fullName>
        <description>Aphasia</description>
        <label>BD_v1.0.5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arteriovenous_Malformation__c</fullName>
        <description>Arteriovenous Malformation</description>
        <label>BD_v1.0.7</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention_Deficit_Hyperactivity_Disorder__c</fullName>
        <description>Attention Deficit Hyperactivity Disorder (ADHD)</description>
        <label>BD_v1.0.8</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autism__c</fullName>
        <description>Autism</description>
        <label>BD_v1.0.9</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batten_Disease__c</fullName>
        <description>Batten Disease</description>
        <label>BD_v1.0.10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behcets_Disease__c</fullName>
        <description>Behcet’s Disease</description>
        <label>BD_v1.0.11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bipolar_Disorder__c</fullName>
        <description>Bipolar Disorder (BPD)</description>
        <label>BD_v1.0.12</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brain_Tumor_or_Brain_Cancer__c</fullName>
        <description>Brain Tumor or Brain Cancer</description>
        <label>BD_v1.0.13</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulimia__c</fullName>
        <description>Bulimia</description>
        <label>BD_v1.0.14</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chiari_Malformation__c</fullName>
        <description>Chiari Malformation</description>
        <label>BD_v1.0.15</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chronic_Inflammatory_Demyelinating__c</fullName>
        <description>Chronic Inflammatory Demyelinating Polyneuropathy</description>
        <label>BD_v1.0.16</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Headache__c</fullName>
        <description>Cluster Headache</description>
        <label>BD_v1.0.17</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concussion__c</fullName>
        <description>Concussion</description>
        <label>BD_v1.0.18</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Personal_and_Family_History_of_Brains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creutzfeldt_Jakob_Disease__c</fullName>
        <description>Creutzfeldt-Jakob Disease (CJD)</description>
        <label>BD_v1.0.19</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dementia_Non_Alzheimer_type__c</fullName>
        <description>Dementia (Non-Alzheimer type)</description>
        <label>BD_v1.0.20</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depression__c</fullName>
        <description>Depression</description>
        <label>BD_v1.0.21</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Down_Syndrome__c</fullName>
        <description>Down Syndrome</description>
        <label>BD_v1.0.22</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dyslexia__c</fullName>
        <description>Dyslexia</description>
        <label>BD_v1.0.23</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dyspraxia__c</fullName>
        <description>Dyspraxia</description>
        <label>BD_v1.0.24</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dystonia__c</fullName>
        <description>Dystonia</description>
        <label>BD_v1.0.25</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Encephalitis__c</fullName>
        <description>Encephalitis</description>
        <label>BD_v1.0.26</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epilepsy_Seizures__c</fullName>
        <description>Epilepsy / Seizures</description>
        <label>BD_v1.0.27</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Essential_Tremor__c</fullName>
        <description>Essential Tremor</description>
        <label>BD_v1.0.28</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friedreichs_Ataxia__c</fullName>
        <description>Friedreich’s Ataxia</description>
        <label>BD_v1.0.29</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gaucher_Disease__c</fullName>
        <description>Gaucher Disease</description>
        <label>BD_v1.0.30</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generalized_Anxiety_Disorder__c</fullName>
        <description>Generalized Anxiety Disorder</description>
        <label>BD_v1.0.31</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guillain_Barre_Syndrome__c</fullName>
        <description>Guillain-Barre Syndrome</description>
        <label>BD_v1.0.32</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headaches__c</fullName>
        <description>Headaches (various types)</description>
        <label>BD_v1.0.33</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Huntingtons_Disease__c</fullName>
        <description>Huntington’s Disease (HD)</description>
        <label>BD_v1.0.34</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hydrocephalus__c</fullName>
        <description>Hydrocephalus</description>
        <label>BD_v1.0.35</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leukodystrophy__c</fullName>
        <description>Leukodystrophy</description>
        <label>BD_v1.0.36</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lewy_Body_Dementia__c</fullName>
        <description>Lewy Body Dementia (LBD)</description>
        <label>BD_v1.0.37</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_in_Syndrome__c</fullName>
        <description>Locked-in Syndrome</description>
        <label>BD_v1.0.38</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menieres_Disease__c</fullName>
        <description>Meniere’s Disease</description>
        <label>BD_v1.0.39</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meningitis__c</fullName>
        <description>Meningitis</description>
        <label>BD_v1.0.40</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meningococcal_Disease__c</fullName>
        <description>Meningococcal Disease</description>
        <label>BD_v1.0.41</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migraine__c</fullName>
        <description>Migraine [Any Type]</description>
        <label>BD_v1.0.42</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motor_Neuron_Disease__c</fullName>
        <description>Motor Neuron Disease [non-ALS Type]</description>
        <label>BD_v1.0.43</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Sclerosis__c</fullName>
        <description>Multiple Sclerosis (MS)</description>
        <label>BD_v1.0.44</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_System_Atrophy__c</fullName>
        <description>Multiple System Atrophy (MSA)</description>
        <label>BD_v1.0.45</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muscular_Dystrophy__c</fullName>
        <description>Muscular Dystrophy</description>
        <label>BD_v1.0.46</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Myasthenia_Gravis__c</fullName>
        <description>Myasthenia Gravis</description>
        <label>BD_v1.0.47</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narcolepsy__c</fullName>
        <description>Narcolepsy</description>
        <label>BD_v1.0.48</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obsessive_Compulsive_Disorder__c</fullName>
        <description>Obsessive Compulsive Disorder (OCD)</description>
        <label>BD_v1.0.49</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parkinsons_Disease__c</fullName>
        <description>Parkinson’s Disease (PD)</description>
        <label>BD_v1.0.50</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peripheral_Neuropathy__c</fullName>
        <description>Peripheral Neuropathy</description>
        <label>BD_v1.0.51</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personality_Disorder__c</fullName>
        <description>Personality Disorder [All Types]</description>
        <label>BD_v1.0.52</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picks_Disease__c</fullName>
        <description>Pick’s Disease</description>
        <label>BD_v1.0.53</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Traumatic_Stress_Disorder__c</fullName>
        <description>Post-Traumatic Stress Disorder (PTSD)</description>
        <label>BD_v1.0.54</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prader_Willi_Syndrome__c</fullName>
        <description>Prader-Willi Syndrome</description>
        <label>BD_v1.0.55</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progressive_Supranuclear_Palsy__c</fullName>
        <description>Progressive Supranuclear Palsy (PSP)</description>
        <label>BD_v1.0.56</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restless_Legs_Syndrome__c</fullName>
        <description>Restless Legs Syndrome</description>
        <label>BD_v1.0.57</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rett_Syndrome__c</fullName>
        <description>Rett Syndrome</description>
        <label>BD_v1.0.58</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schizophrenia__c</fullName>
        <description>Schizophrenia</description>
        <label>BD_v1.0.59</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shy_Drager_Syndrome__c</fullName>
        <description>Shy Drager Syndrome</description>
        <label>BD_v1.0.60</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sleep_Disorders__c</fullName>
        <description>Sleep Disorders</description>
        <label>BD_v1.0.61</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spasmodic_Dysphonia__c</fullName>
        <description>Spasmodic Dysphonia</description>
        <label>BD_v1.0.62</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stroke__c</fullName>
        <description>Stroke</description>
        <label>BD_v1.0.63</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subarachnoid_Haemorrhage__c</fullName>
        <description>Subarachnoid Haemorrhage</description>
        <label>BD_v1.0.64</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sydenhams_Chorea__c</fullName>
        <description>Sydenham’s Chorea</description>
        <label>BD_v1.0.65</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tay_Sachs_Disease__c</fullName>
        <description>Tay-Sachs Disease</description>
        <label>BD_v1.0.66</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tourette_Syndrome__c</fullName>
        <description>Tourette Syndrome</description>
        <label>BD_v1.0.67</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transient_Ischemic_Attack__c</fullName>
        <description>Transient Ischemic Attack (TIA)</description>
        <label>BD_v1.0.68</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transverse_Myelitis__c</fullName>
        <description>Transverse Myelitis</description>
        <label>BD_v1.0.69</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traumatic_Brain_Injury__c</fullName>
        <description>Traumatic Brain Injury (TBI)</description>
        <label>BD_v1.0.70</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigeminal_Neuralgia__c</fullName>
        <description>Trigeminal Neuralgia</description>
        <label>BD_v1.0.71</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuberous_Sclerosis__c</fullName>
        <description>Tuberous Sclerosis</description>
        <label>BD_v1.0.72</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Von_Hippel_Lindau_Syndrome__c</fullName>
        <description>Von Hippel-Lindau Syndrome</description>
        <label>BD_v1.0.73</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>BD</label>
    <nameField>
        <displayFormat>BD-{0000000000}</displayFormat>
        <label>BD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>